<resources>
    <string name="app_name">Vacation Quiz</string>
    <string name="question_beach_or_mountains">Do you prefer the beach or the mountains?</string>
    <string name="beach">Beach</string>
    <string name="mountains">Mountains</string>
    <string name="question_activity_level">How active would you like to be on your vacation?</string>
    <string name="activity_high">High</string>
    <string name="activity_medium">Medium</string>
    <string name="activity_low">Low</string>
    <string name="question_budget">How much would you like to spend?</string>
    <string name="budget">Budget</string>
    <string name="luxury">Luxury</string>
    <string name="where_should_i_go">Where should I go?</string>
    <string name="question_food">Would you like food to be included in the price?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="destination_vacation">Go on vacation!</string>
    <string name="destination_beach">Go to the beach!</string>
    <string name="destination_big_sur">Go to Big Sur!</string>
    <string name="destination_orange_beach">Go to Orange Beach!</string>
    <string name="destination_miami">Go to Miami!</string>
    <string name="destination_hawaii">Go to Hawaii!</string>
    <string name="destination_fiji">Go to Fiji!</string>
    <string name="destination_jamaica">Go to Jamaica!</string>
    <string name="destination_thailand">Go to Thailand!</string>
    <string name="destination_st_thomas">Go to Saint Thomas!</string>
    <string name="destination_carribbean_cruise">Go on a cruise in the Carribbean!</string>
    <string name="destination_cozumel">Go to Cozumel!</string>
    <string name="destination_turks_and_caicos">Go to Turks and Caicos!</string>
    <string name="destination_costa_rica">Go to Costa Rica!</string>
    <string name="destination_las_vegas">Go to Las Vegas!</string>
    <string name="destination_new_york">Go to New York!</string>
    <string name="destination_european_cruise">Go on a European River Cruise!</string>
    <string name="destination_raleigh">Go to Raleigh!</string>
    <string name="destination_alaskan_cruise">Go on a cruise to Alaska!</string>
    <string name="destination_chicago">Go to Chicago!</string>
    <string name="destination_boston">Go to Boston!</string>
    <string name="destination_austria">Go to Austria!</string>
    <string name="destination_vail">Go to Vail!</string>
    <string name="destination_winter_park">Go to Winter Park!</string>
    <string name="destination_lake_tahoe">Go to Lake Tahoe!</string>
</resources>
